# TTC-delay-prediction

./: .env.example  .gitignore  AGENTS.md  Makefile  README.md  TTC_Delays_Cleaned.ipynb  prmpt.md  pyproject.toml  requirements.txt
data/: README.md
docs/: README.md  api_input_contract.md  api_service.md  architecture.md  categorical_normalization.md  category_quality_audit.md  current_state_audit.md  error_analysis.md  feature_engineering.md  final_qa_checklist.md  historical_feature_lookup.md  model_card.md  model_design.md  model_improvement_eda.md  modeling_data_policy.md  probability_calibration.md  project_definition.md  technical_report.md  two_output_model.md
docs/archive/: category_quality_audit.md  current_state_audit.md  explainability.md  model_experiments.md  model_improvement_eda.md  model_training.md  modeling_baselines.md
reports/model_improvement_eda/: candidate_group_support.csv  candidate_prior_mean_scores.csv  error_by_group.csv  error_contribution_by_group.csv  feature_recommendations.csv  model_improvement_eda.md  (+3 more)
scripts/: create_public_figures.py
src/api/: app.py  (+7 more)
tests/: test_analyze_errors.py  test_api_service.py  test_audit_categories.py  test_build_features.py  test_calibrate_risk_models.py  test_categorical_normalization.py  test_clean_data.py  test_diagnose_target.py  test_evaluate_baselines.py  test_explain_models.py  test_feature_derivation.py  test_historical_lookup.py  test_input_validation.py  test_model_improvement_eda.py  test_public_release_docs.py  test_run_experiments.py  test_train_model.py  test_train_risk_models.py
(+25 files in other folders)
