[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ttc-delay-prediction"
version = "0.1.0"
description = "Incident-time TTC bus and streetcar delay prediction project."
requires-python = ">=3.10"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

